Make the tests spiffier, with the power of pytest-lambda

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = -vv --tb=short
+addopts = -vv --tb=short -p pytester
 
 python_functions = test test_* it_* its_*
 python_classes = Test* With*
